# max-algos

./: .gitignore  README.md  pyproject.toml
src/: ema_signals.py  macd_strategy.py
